# autox

./: .gitignore  LICENSE  README.md  getting-started.txt  pyproject.toml  run-api-test.yaml  run-ui-test.yaml
.devcontainer/: devcontainer.json
.github/workflows/: lint-checker.yaml
autox/: __init__.py  autox_logger.py  config.py
autox/aws/: aws_ec2_util.py
autox/azure/: azure_util.py
autox/cli/: deploy_infra.py  environments.py  root.py  run_tests.py
autox/deploy_infra/: terraform.py
autox/helpers/: os_helpers.py
autox/utilities/: common_utils.py  raise_jira_ticket.py  report_util.py  rest_api_util.py
page_objects/: challenging_dom_objects.py  frames_objects.py  home_page_objects.py
tests/api_tests/: conftest.py  test_health.py  test_mocking_example.py  test_users.py
tests/ui/: test_1.py
tests/ui_tests/: conftest.py  test_challenging_dom.py  test_frames.py
